--- a/css/style.css
+++ b/css/style.css
@@ -179,9 +179,12 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  position: relative;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -193,11 +196,24 @@ body {
     rgba(1, 1, 3, 1) 8%,
     rgba(255, 255, 255, 0) 55%
   );
+} */
+
+.hero .mask-container {
+  position: absolute;
+  inset: 0;
+  -webkit-mask-image: url("../images/mask-home.png");
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: cover;
+  -webkit-mask-position: center;
 }
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 68rem;
+  /* max-width: 68rem; */
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 100px;
 }
 
 .hero .content h1 {
@@ -265,6 +281,10 @@ body {
 
 .about .row .about-img img {
   width: 100%;
+  -webkit-mask-image: url("../images/coffe-beans.svg");
+  -webkit-mask-size: 50%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
 }
 
 .about .row .content {
